# Cardgame

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/core/: __init__.py
src/core/engine/: __init__.py  action.py  actor.py  card.py  effect.py  event.py  game.py  observation.py  request.py  rng.py  zone.py
src/core/ui/: __init__.py  cli.py  ui.py  ui2d.py
src/games/pesten/: __init__.py
tests/: test_action_contract.py  test_game_contract.py  test_request_contract.py  test_smoke.py
